# roster-wizard

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_dev  Dockerfile_prod  LICENSE.md  Pipfile  README.md  docker-compose.demo.yml  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yml  docker-compose_dev.yml  docker-compose_prod.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
api/: apps.py  serializers.py  urls.py  views.py
nginx/: nginx.conf
pages/: admin.py  apps.py  urls.py  views.py
roster_project/: celery.py  settings.py  urls.py  wsgi.py
roster_wizard/: pytest.ini
rosters/: admin.py  apps.py  context_processors.py  forms.py  logic.py  models.py  roster.py  tasks.py  urls.py  views.py
templates/: base.html  custom_user_delete.html  custom_user_detail.html  custom_user_list.html  customuser_create.html  customuser_detail.html  customuser_list.html  customuser_update.html  day_create.html  day_delete.html  day_detail.html  day_group_day_delete.html  day_group_day_detail.html  day_group_day_new.html  day_group_delete.html  day_group_detail.html  day_group_edit.html  day_group_list.html  day_group_new.html  day_list.html  day_set_create.html  day_set_new.html  day_update.html  daygroup_create.html  daygroup_delete.html  daygroup_detail.html  daygroup_list.html  daygroup_update.html  daygroupday_create.html  daygroupday_detail.html  edit_roster.html  generate_roster.html  home.html  leave_create.html  leave_delete.html  leave_detail.html  leave_list.html  leave_new.html  leave_update.html  preference_delete.html  (+82 more)
(+203 files in other folders)
